# utils

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cmake_configure.conf.in  cmake_configure_info.cmake  fetch_content.cmake  get_cmake_preset.cmake
cmake/toolchain_files/: darwin_clang.cmake  linux_clang.cmake  linux_gnu.cmake  win_clang.cmake  win_clang_mingw.cmake  win_clang_msvc.cmake  win_mingw.cmake  win_msvc.cmake
code/: CMakeLists.txt
code/inc/: utils_getopt_long.h
code/src/: utils_getopt_long.c
script/: cmake_tools.sh  common_func.sh
